# invoiceops-agent-fleet

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-29-invoiceops-agent-fleet.md
docs/superpowers/specs/: 2026-06-29-invoiceops-agent-fleet-design.md
evals/: test_duplicates.py  test_extraction.py  test_policy.py  test_security.py
invoiceops/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  schemas.py
invoiceops/agents/: __init__.py  anomaly_agent.py  extraction_agent.py  intake_agent.py  policy_agent.py  report_agent.py
invoiceops/mcp_server/: __init__.py  local_files_server.py
invoiceops/tools/: __init__.py  duplicate_detector.py  file_reader.py  invoice_parser.py  policy_rules.py  report_writer.py  security_scanner.py
samples/expected/: expected_invoices.json  expected_review_queue.json
samples/inbox/: invoice_duplicate_a.txt  invoice_duplicate_b.txt  invoice_missing_vat.txt  invoice_valid_001.txt  irrelevant_note.txt  malicious_invoice.txt  receipt_valid_001.txt
