[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceops-agent-fleet"
version = "0.1.0"
description = "Placeholder scaffold for an invoice operations agent fleet."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["invoiceops*"]
