[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceops-agent-fleet"
version = "0.1.0"
description = "Placeholder scaffold for an invoice operations agent fleet."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
]
cli = [
    "typer>=0.12",
]
data = [
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["invoiceops*"]
