[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceops-agent-fleet"
version = "0.1.0"
description = "Safe multi-agent invoice review demo for local accounting handoff."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
]
data = [
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
invoiceops = "invoiceops.cli:main"

[tool.setuptools.packages.find]
include = ["invoiceops*"]
